added references to justify 'Ferramentas e Metodos' section

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -257,6 +257,12 @@
 	note = {\url{http://martinfowler.com/articles/ designDead.html\# PlannedAndEvolutionaryDesign}}
 }
 
+@misc{fowler_design_dead,
+	title = {Is Design Dead?},
+	author = {Martin Fowler},	
+	note = {\url{http://martinfowler.com/articles/designDead.html}}
+}
+
 @misc{karpov_static_code_analysis,
   title = {Static code analysis},
   author = {Karpov Andrey},
@@ -313,4 +319,44 @@
   year={2010},
   publisher={Pragmatic Bookshelf}
 }
+
+@article{10.1109/IISWC.2005.1526008,
+	author = {null Zhongbo Cao and null Wei Huang and J.M. Chang},
+	title = {A study of Java virtual machine scalability issues on SMP systems},
+	journal ={2013 IEEE International Symposium on Workload Characterization (IISWC)},
+	volume = {0},
+	isbn = {0-7803-9461-5},
+	year = {2005},
+	pages = {119-128},
+	doi = {http://doi.ieeecomputersociety.org/10.1109/IISWC.2005.1526008},
+	publisher = {IEEE Computer Society},
+	address = {Los Alamitos, CA, USA},
+}
+
+
+@misc{java_report_2012,
+  title = {Developer Productivity Report 2012; Java Tools, Tech, Devs & Data},
+  author = {ZeroTurnaround},
+  note = {\url{http://goo.gl/UvkZtg}}
+}
+
+@misc{ci_fowler,
+  title = {Continuous Integration},
+  author = {Martin Fowler},
+  note = {\url{http://goo.gl/cwQxIv}}
+}
+
+@misc{scm_ranking,
+  title = {SCM System Ranking},
+  author = {Switch-Gears ApS},
+  note = {\url{http://gitgear.com/why_git/SCM_Ranking_2013Q3_F1.pdf}}
+}
+
+@inproceedings{quality_java_2010,
+  title={Quality Assessment of Java Source Code},
+  author={João Miguel Rodrigues Quintas Veiga},
+  year={2010},
+  organization={Escola de Engenharia da Universidade do Minho}
+}
+
 
