adjusting references to justify 'Ferramentas e Metodos' section

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -335,7 +335,7 @@
 
 
 @misc{java_report_2012,
-  title = {Developer Productivity Report 2012; Java Tools, Tech, Devs & Data},
+  title = {Developer Productivity Report 2012; Java Tools, Tech, Devs and Data},
   author = {ZeroTurnaround},
   note = {\url{http://goo.gl/UvkZtg}}
 }
@@ -349,7 +349,7 @@
 @misc{scm_ranking,
   title = {SCM System Ranking},
   author = {Switch-Gears ApS},
-  note = {\url{http://gitgear.com/why_git/SCM_Ranking_2013Q3_F1.pdf}}
+  note = {\url{http://goo.gl/Fq032K}}	
 }
 
 @inproceedings{quality_java_2010,
