--- a/eso-project.tex
+++ b/eso-project.tex
@@ -359,7 +359,7 @@ Os testes não se resumem a automatização em sua totalidade, cabendo ao engenh
 
 Não serão adotadas ferramentas de manutenção em específico. Tendo em vista que o código está sendo produzido de forma clara (com especificações claras vinculadas a testes executáveis), não há a necessidade de utilização de ferramentas de reengenharia ou compreeensão sugeridas no SWEBOK \cite{society_software_2004}. A engenharia reversa para diagramas de classes pode ser desejável em situações de comunicação, mas por não se tratar de algo pertinente ao método de construção do software aqui proposto, não será formalizado em uma ferramenta especifica.
 
-A gerência de configuração fará uso da ferramenta Git, por ser a que tem mais crescido no mercado \cite{scm_ranking}, além do fato de ser facilmente utilizada. Para garantia de qualidade, a ferramenta open source SonarQube será utilizada, por ser popular à comunidade Java, além de ser bastante efetiva, sendo capaz de avaliar design, arquitetura, complexidade, duplicação, regras de codificação, potenciais erros e testes \cite{quality_java_2010}.   
+A gerência de configuração fará uso da ferramenta Git, por ser a que tem mais crescido no mercado \cite{scm_ranking}, além do fato de ser facilmente utilizada. Para garantia de qualidade, a ferramenta open source SonarQube será utilizada, por ser popular à comunidade Java, além de ser bastante efetiva, sendo capaz de avaliar, além de cobertura de testes e análise estática de código, também aspectos como design, arquitetura, complexidade, duplicação, regras de codificação, potenciais erros e testes \cite{quality_java_2010}.   
 
 O método heurístico de orientação a objetos será utilizado, principalmente por caber ao problema da MotorBRAS: a necessidade do problema pode ser claramente mapeada para objetos com estado e comportamento, bem como suas interações. Além deste benefício inicial, o paradigma de orientação a objetos está diretamente vinculado à linguagem de programação Java. E conforme já descrito na seção de Requisitos deste documento, serão feitos uso de protótipos, mais especificamente para validar a necessidade do cliente em termos de requisitos.  
 
