--- a/eso-project.bib
+++ b/eso-project.bib
@@ -253,13 +253,13 @@
 
 @misc{fowler_planned_evolutionary_design,
 	title = {Planned and Evolutionary Design},
-	author = {Martin Fowler},	
+	author = {Fowler, Martin},	
 	note = {\url{http://martinfowler.com/articles/ designDead.html\# PlannedAndEvolutionaryDesign}}
 }
 
 @misc{fowler_design_dead,
 	title = {Is Design Dead?},
-	author = {Martin Fowler},	
+	author = {Fowler, Martin},	
 	note = {\url{http://martinfowler.com/articles/designDead.html}}
 }
 
@@ -271,15 +271,15 @@
 
 @misc{fowler_products_not_projects,
   title={Microservices},
-  author={Martin Fowler},
+  author={Fowler, Martin},
   note = {\url{http://martinfowler.com/articles/microservices.html \#ProductsNotProjects}}
 }
 
 @misc{fowler_ci_2006,
   title={Continuous Integration},
-  author={Martin Fowler},
+  author={Fowler, Martin},
   year={2006},
-  note={\url{http://martinfowler.com/articles/continuousIntegration.html}}
+  note={\url{http://martinfowler.com/articles/ continuousIntegration.html}}
 }
 
 @book{Fowler1999,
@@ -342,7 +342,7 @@
 
 @misc{ci_fowler,
   title = {Continuous Integration},
-  author = {Martin Fowler},
+  author = {Fowler, Martin},
   note = {\url{http://goo.gl/cwQxIv}}
 }
 
