Added citation to swebok on section about design

--- a/eso-project.tex
+++ b/eso-project.tex
@@ -167,7 +167,7 @@ Além deste relatório, a qualidade do design também será garantida através d
 
 Em relação às descrições estruturais, espera-se que o documento de arquitetura defina diagramas de deployment, e é desejável que os diagramas de classes simplificados que surgem da prática de DDD também sejam documentados (a ser definido pelo time).
 
-Para este projeto, a estratégia de design é baseada em design orientado a objeto, por ser um modelo comumente difundido pelos membros do time e por ser adequar ao projeto proposto.
+Para este projeto, a estratégia de design é baseada em design orientado a objeto \cite{society_software_2004}, por ser um modelo comumente difundido pelos membros do time e por ser adequar ao projeto proposto.
 
 
 \subsection{Construção}
