--- a/eso-project.tex
+++ b/eso-project.tex
@@ -39,13 +39,13 @@ Engenharia de Software, SWEBOK, Scrum
 
 \IEEEPARstart{N}{os} dias atuais, poucas coisas são mais importantes para a Humanidade quanto a questão da ecologia. Na proporção em que crescemos enquanto espécie, a projeção média de crescimento da população mundial é de 9 bilhões de pessoas até 2050. \cite{wwf_living_2013} Esse crescimento populacional influi diretamente nas condições de vida no planeta.
 
-Desta forma, no que concerne à área de atuação da MotorBRAS, a redução no controle de emissões de gás carbônico apresenta-se, mais do que nunca, como um diferencial competitivo atraente. Países mais desenvolvidos estão prontos e dispostos a investir em tecnologias para redução do consumo de CO2, de forma que o risco no investimento em tecnologias ambientais apresenta-se como baixo, uma vez que a demanda por novas tecnologias neste campo é cada vez mais atrativa. As empresas que forem pioneiras no investimento de tecnologias ambientais que influenciem a vida das pessoas terão uma ótima vantagem competitiva em relação aos concorrentes. 
+Desta forma, no que concerne à área de atuação da MotorBRAS, a redução no controle de emissões de gás carbônico apresenta-se, mais do que nunca, como um diferencial competitivo atraente. Países mais desenvolvidos estão prontos e dispostos a investir em tecnologias para redução do consumo de CO2, de forma que o risco no investimento em tecnologias ambientais apresenta-se como baixo, uma vez que a demanda por novas tecnologias neste campo é cada vez mais atrativa. As empresas que forem pioneiras no investimento de tecnologias ambientais que influenciem a vida das pessoas terão uma ótima vantagem competitiva. 
 
-Este projeto visa agregar valor à intenção da MoToRBRAS de entrar no mercado de carros elétricos como serviço até 2020. A proposta é a de agregar tecnologia ao produto, de forma a cativar o consumidor em relação ao serviço e, assim, mitigar o impacto do Homem no meio ambiente. Consequências diretas são a geração de uma imagem positiva no mercado, bem como a conquista de uma posição de vanguarda e liderança no mercado. 
+Este projeto visa agregar valor à intenção da MoToRBRAS de entrar no mercado de carros elétricos como serviço até 2020. A proposta é a de agregar tecnologia ao produto, de forma a cativar o consumidor em relação ao serviço e, assim, mitigar o impacto do Homem no meio ambiente. Consequências diretas são a geração de uma imagem positiva no mercado, bem como a conquista de uma posição de vanguarda e liderança. 
 
 Países desenvolvidos são favoráveis à ideia de aluguel de carros elétricos em suas grandes cidades, como forma de locomoção barata e rápida das pessoas para seu local de trabalho. Carros elétricos, sendo pequenos e de baixo consumo, são altamente atrativos como um meio-termo entre os carros particulares e o transporte público. 
 
-O que este projeto propõe é tornar esse serviço ainda mais atrativo, através da customização de cada carro, pelo uso de tecnologia de ponta. O diferencial é permitir que o carro seja automaticamente customizado para o indivíduo. 
+O que este projeto propõe é suportar tecnologicamente essa atratividade, através da customização de cada carro, pelo uso de tecnologia de ponta. O diferencial é permitir que o carro seja automaticamente customizado para o indivíduo. 
 
 
 \section{Condições e Características Importantes}
